--- a/amigopet-frontend/src/app/footer/footer.component.html
+++ b/amigopet-frontend/src/app/footer/footer.component.html
@@ -1,43 +1,45 @@
 <footer id="foot" class="row-fluid">
-    <div id="principal">
+  <div id="principal">
+    <div class="row">
+      <div class="col-md-6">
+        <p>Redes Sociais:</p>
+        <a href=""
+          ><i class="fab fa-instagram" id="social"> amigoPetOficial</i></a
+        >
+        <br />
+        <a href=""><i class="fab fa-facebook" id="social"> Facebook</i></a>
+      </div>
+      <div class="col-md-6" id="desenv">
         <div class="row">
-            <div class="col-md-6">
-                <p>Redes Sociais:</p>
-                <a href=""><i class="fab fa-instagram" id="social"> amigoPetOficial</i></a>
-                <br>
-                <a href=""><i class="fab fa-facebook" id="social"> Facebook</i></a>
+          <div class="col-md-4">
+            <a><strong>Desenvolvedores:</strong></a>
+          </div>
+          <div class="col-md-4">
+            <div class="row">
+              <a href=""><i class="fab fa-linkedin"></i> Gabriel Garcia</a>
+              <a href=""><i class="fab fa-linkedin"></i> Suyanne Candido</a>
             </div>
-            <div class="col-md-6" id="desenv">
-                <div class="row">
-                    <div class="col-md-4">
-                        <a><strong>Desenvolvedores:</strong></a>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="row">
-                            <a href=""><i class="fab fa-linkedin"></i> Gabriel Garcia</a>
-                            <a href=""><i class="fab fa-linkedin"></i> Suyanne Candido</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="row">
-                            <a href=""><i class="fab fa-linkedin"></i> Liandra Werner</a>
-                            <a href=""><i class="fab fa-linkedin"></i> Jeferson Moller</a>
-                        </div>
-                    </div>
-                </div>
+          </div>
+          <div class="col-md-4">
+            <div class="row">
+              <a href=""><i class="fab fa-linkedin"></i> Liandra Werner</a>
+              <a href=""><i class="fab fa-linkedin"></i> Jeferson Moller</a>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-    <div id="rodape" class="container">
-        <div class="row">
-            <div class="col-md-6 text-left">
-                <p>Todos os direitos reservados &copy; 2021</p>
-            </div>
-            <div class="col-md-6 d-flex text-right">
-                <p>Desenvolvido com amor por</p>
-                <p class="linha-vertical"></p>
-                <img src="../../assets/logocerta3.png" id="logo" alt="logo">
-            </div>
-        </div>
+  </div>
+  <div id="rodape" class="container">
+    <div class="row">
+      <div class="col-md-6 text-left">
+        <p>Todos os direitos reservados &copy; 2021</p>
+      </div>
+      <div class="col-md-6 d-flex text-right">
+        <p>Desenvolvido com amor por</p>
+        <p class="linha-vertical"></p>
+        <img src="../../assets/logocerta3.png" id="logo" alt="logo" />
+      </div>
     </div>
+  </div>
 </footer>
