--- a/amigopet-frontend/src/app/sobre/sobre.component.html
+++ b/amigopet-frontend/src/app/sobre/sobre.component.html
@@ -1,65 +1,95 @@
 <div class="container-fluid" id="principal">
-    <div class="container" id="conteudo">
-
-        <div class="row">
-            <div class="col-md-6">
-                <h3>O que é o AmigoPET?</h3>
-                <br>
-                <p>É uma plataforma onde pode-se adotar e doar pets. Mas conseguimos juntar o útil ao agradável, no
-                    nosso site as ONG's que cuidam de animais abandonados podem se cadastrar e contar um pouco da sua
-                    trajetória, cadastrar seus animais para ganhar visibilidade e registrar seus dados bancários e
-                    localização para arrecadar doações tanto em forma de dinheiro quanto de ração e afins.</p>
-            </div>
-            <div class="col-md-6">
-                <img src="../../assets/dog2_sobre.jpg" alt="imagem cachorro lindo">
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-5">
-                <img src="../../assets/dog3_sobre.jpeg" alt="">
-            </div>
-            <div class="col-md-7">
-                <h3>Por quê decidimos seguir essa ideia?</h3>
-                <br>
-                <p>Infelimente o abandono de animais é algo comum no nosso país, a OMS estima que há mais de 30 milhões
-                    de animais domésticos abandonados no Brasil, sendo 10 milhões de gatos e 20 milhões de cachorros. O
-                    AmigoPet surgiu como mais uma opção para os donos de animais que necessitam de um lar a encontrá-lo.
-
-                </p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-6">
-                <h3>Quem somos?</h3>
-                <br>
-                <div class="row" style="font-size: 1.1em; color: rgb(9, 99, 64); font-weight:500;">
-                    <div class="col-md-6">
-                        <img src="../../assets/gabriel.jpg" id="icone-pessoa" alt="desenvolvedores"> Gabriel Garcia
-                    </div>
-                    <div class="col-md-6">
-                        <img src="../../assets/liandra.jpg" id="icone-pessoa" alt="desenvolvedores"> Liandra Werner
-                    </div>
-                </div>
-                <div class="row" style="font-size: 1.1em; color: rgb(9, 99, 64); font-weight:500;">
-                    <div class="col-md-6">
-                        <img src="../../assets/jefferson.jpg" id="icone-pessoa" alt="desenvolvedores"> Jefferson
-                        Moller
-                    </div>
-                    <div class="col-md-6">
-                        <img src="../../assets/suy.jpg" id="icone-pessoa" alt="desenvolvedores"> Suyanne Candido
-                    </div>
-                </div>
-                <p>Somos estudantes do entra21 com uma paixão em cumum, a tecnologia. Na busca de encontrar uma forma
-                    de ajudar o mundo de alguma maneira, chegamos na ideia de criar o <span id="amigopet">AmigoPET.</span></p>
-            </div>
-            <div class="col-md-6">
-                <img src="../../assets/dog_sobre.jpg" alt="">
-
-            </div>
-        </div>
-
+  <div class="container" id="conteudo">
+    <div class="row">
+      <div class="col-md-6">
+        <h3>O que é o AmigoPET?</h3>
+        <br />
+        <p>
+          É uma plataforma onde pode-se adotar e doar pets. Mas conseguimos
+          juntar o útil ao agradável, no nosso site as ONG's que cuidam de
+          animais abandonados podem se cadastrar e contar um pouco da sua
+          trajetória, cadastrar seus animais para ganhar visibilidade e
+          registrar seus dados bancários e localização para arrecadar doações
+          tanto em forma de dinheiro quanto de ração e afins.
+        </p>
+      </div>
+      <div class="col-md-6">
+        <img src="../../assets/dog2_sobre.jpg" alt="imagem cachorro lindo" />
+      </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-5">
+        <img src="../../assets/dog3_sobre.jpeg" alt="" />
+      </div>
+      <div class="col-md-7">
+        <h3>Por quê decidimos seguir essa ideia?</h3>
+        <br />
+        <p>
+          Infelimente o abandono de animais é algo comum no nosso país, a OMS
+          estima que há mais de 30 milhões de animais domésticos abandonados no
+          Brasil, sendo 10 milhões de gatos e 20 milhões de cachorros. O
+          AmigoPet surgiu como mais uma opção para os donos de animais que
+          necessitam de um lar a encontrá-lo.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Quem somos?</h3>
+        <br />
+        <div
+          class="row"
+          style="font-size: 1.1em; color: rgb(9, 99, 64); font-weight: 500"
+        >
+          <div class="col-md-6">
+            <img
+              src="../../assets/gabriel.jpg"
+              id="icone-pessoa"
+              alt="desenvolvedores"
+            />
+            Gabriel Garcia
+          </div>
+          <div class="col-md-6">
+            <img
+              src="../../assets/liandra.jpg"
+              id="icone-pessoa"
+              alt="desenvolvedores"
+            />
+            Liandra Werner
+          </div>
+        </div>
+        <div
+          class="row"
+          style="font-size: 1.1em; color: rgb(9, 99, 64); font-weight: 500"
+        >
+          <div class="col-md-6">
+            <img
+              src="../../assets/jefferson.jpg"
+              id="icone-pessoa"
+              alt="desenvolvedores"
+            />
+            Jefferson Moller
+          </div>
+          <div class="col-md-6">
+            <img
+              src="../../assets/suy.jpg"
+              id="icone-pessoa"
+              alt="desenvolvedores"
+            />
+            Suyanne Candido
+          </div>
+        </div>
+        <p>
+          Somos estudantes do entra21 com uma paixão em cumum, a tecnologia. Na
+          busca de encontrar uma forma de ajudar o mundo de alguma maneira,
+          chegamos na ideia de criar o <span id="amigopet">AmigoPET.</span>
+        </p>
+      </div>
+      <div class="col-md-6">
+        <img src="../../assets/dog_sobre.jpg" alt="" />
+      </div>
+    </div>
+  </div>
 </div>
