--- a/amigopet-frontend/src/app/verdica/verdica.component.html
+++ b/amigopet-frontend/src/app/verdica/verdica.component.html
@@ -1,23 +1,22 @@
 <div class="container-fluid" id="principal">
-    <div class="container">
-
-        <div class="card">
-            <div class="container">
-                <div class="row">
-
-                    <img class="card-img" src="../../assets/papagaio.jpg" alt="Card image cap">
-
-                </div>
-                <div class="row">
-                    <div id="conteudo">
-                        <h3>{{dica.titulo}}</h3>
-                        <br>
-                        <p>{{dica.descricao}}</p>
-                    </div>
-
-                </div>
-            </div>
+  <div class="container">
+    <div class="card">
+      <div class="container">
+        <div class="row">
+          <img
+            class="card-img"
+            src="../../assets/papagaio.jpg"
+            alt="Card image cap"
+          />
         </div>
-
+        <div class="row">
+          <div id="conteudo">
+            <h3>{{ dica.titulo }}</h3>
+            <br />
+            <p>{{ dica.descricao }}</p>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
