--- a/amigopet-frontend/src/app/menu/menu.component.html
+++ b/amigopet-frontend/src/app/menu/menu.component.html
@@ -38,7 +38,14 @@
       </li>
 
       <li class="nav-item">
-        <a tabindex="0" routerLink="/listong" id="navbarDropdown2" role="button"> Ongs </a>
+        <a
+          tabindex="0"
+          routerLink="/listong"
+          id="navbarDropdown2"
+          role="button"
+        >
+          Ongs
+        </a>
       </li>
 
       <li class="nav-item">
@@ -48,17 +55,32 @@
       </li>
 
       <li>
-        <a tabindex="0" routerLink="/login" id="navbarDropdown2" role="button" id="btnCadastro"  *ngIf="!logged"> Login </a>
+        <a
+          tabindex="0"
+          routerLink="/login"
+          id="navbarDropdown2"
+          role="button"
+          id="btnCadastro"
+          *ngIf="!logged"
+        >
+          Login
+        </a>
       </li>
 
-      <li class="nav-item" ngbDropdown display="dynamic"  *ngIf="logged">
+      <li class="nav-item" ngbDropdown display="dynamic" *ngIf="logged">
         <a tabindex="0" ngbDropdownToggle role="button">
           <i class="far fa-user"></i>
         </a>
-        <div ngbDropdownMenu aria-labelledby="navbarDropdown3" class="dropdown-menu">
+        <div
+          ngbDropdownMenu
+          aria-labelledby="navbarDropdown3"
+          class="dropdown-menu"
+        >
           <span><a routerLink="/meuperfil" ngbDropdownItem>Meu perfil</a></span>
           <span><a routerLink="/cadastroAnimal" ngbDropdownItem>Doar</a></span>
-          <span><a routerLink="/pets/{{user.id}}" ngbDropdownItem>Pets</a></span>
+          <span
+            ><a routerLink="/pets/{{ user.id }}" ngbDropdownItem>Pets</a></span
+          >
           <span><a ngbDropDownItem (click)="logoff()"> Deslogar</a> </span>
         </div>
       </li>
