--- a/amigopet-frontend/src/app/menu/menu.component.scss
+++ b/amigopet-frontend/src/app/menu/menu.component.scss
@@ -8,14 +8,14 @@ nav {
   font-size: 25px;
 }
 
-a{
+a {
   color: black;
   margin-left: 30px;
 }
 
 a:hover {
-  transition: all .2s ease-out;
-  border-bottom: 4px solid 	#008080;
+  transition: all 0.2s ease-out;
+  border-bottom: 4px solid #008080;
   color: #e2b144 !important;
   font-weight: 600;
   font-size: 17px;
@@ -23,7 +23,7 @@ a:hover {
 
 #logo {
   width: 170px;
-  margin-left:2%;
+  margin-left: 2%;
   margin-top: 10px;
 }
 
