--- a/amigopet-frontend/src/app/visualizar-animal/visualizar-animal.component.html
+++ b/amigopet-frontend/src/app/visualizar-animal/visualizar-animal.component.html
@@ -1,9 +1,6 @@
 <div class="container-fluid mb-5" id="principal">
-
   <div class="conteudo row">
-
     <div class="col-md-6">
-
       <div class="row">
         <div class="imagensPets">
           <ngb-carousel>
@@ -20,42 +17,44 @@
           </ngb-carousel>
         </div>
       </div>
-
     </div>
 
     <div class="col-md-6" id="ladoDois">
       <div class="row">
         <div class="card">
           <div class="card-body">
-            <h3>{{animal.nome}}</h3>
+            <h3>{{ animal.nome }}</h3>
 
-            <p>Raça: {{animal.raca}}</p>
+            <p>Raça: {{ animal.raca }}</p>
 
-            <p>Porte: {{animal.porte}}</p>
+            <p>Porte: {{ animal.porte }}</p>
 
-            <p>Sexo: {{animal.sexo}}</p>
+            <p>Sexo: {{ animal.sexo }}</p>
 
-            <p>Espécie: {{animal.tipo}}</p>
+            <p>Espécie: {{ animal.tipo }}</p>
 
-            <p>Idade: {{animal.idade}}</p>
+            <p>Idade: {{ animal.idade }}</p>
 
-            <p>Descrição: {{animal.descricao}}</p>
-
+            <p>Descrição: {{ animal.descricao }}</p>
           </div>
         </div>
-
       </div>
       <div class="row">
         <div class="card">
           <div class="card-body">
             <h3>Entre em contato com o doador</h3>
-            <p>Nome: {{nomeUsuario}}</p>
-            <p>Telefone: {{celularUsuario}}</p>
+            <p>Nome: {{ nomeUsuario }}</p>
+            <p>Telefone: {{ celularUsuario }}</p>
 
-            <a href="https://api.whatsapp.com/send?l=pt&amp;phone={{celularUsuario}}"
-            class="whatsapp_2 float float-right float-floatingButtonCenter"
-             style="background-color: #25d366;" target="_blank">
-            <i class="whatsapp_2 fa fa-whatsapp whatsapp "></i>
+            <a
+              href="https://api.whatsapp.com/send?l=pt&amp;phone={{
+                celularUsuario
+              }}"
+              class="whatsapp_2 float float-right float-floatingButtonCenter"
+              style="background-color: #25d366"
+              target="_blank"
+            >
+              <i class="whatsapp_2 fa fa-whatsapp whatsapp"></i>
             </a>
           </div>
         </div>
