--- a/amigopet-frontend/src/app/visualizar-animal/visualizar-animal.component.scss
+++ b/amigopet-frontend/src/app/visualizar-animal/visualizar-animal.component.scss
@@ -16,7 +16,7 @@
   margin-top: 5em !important;
 }
 
-.card{
+.card {
   background-color: rgba(255, 253, 253, 0.959);
   border-radius: 20px;
   box-shadow: 0 10px 30px 0 rgba(172, 168, 168, 0.43);
@@ -30,111 +30,106 @@
   width: 100%;
 }
 .whatsapp {
-    clear: both;
-    border-radius: 4px
+  clear: both;
+  border-radius: 4px;
 }
 
 .whatsapp:focus {
-    border: 0;
-    outline: none!important
+  border: 0;
+  outline: none !important;
 }
 
 .whatsapp span {
-    border-radius: 4px;
-    background: #25d366;
-    color: #fff;
-    font-size: 13px;
-    padding: 6px 8px;
-    display: inline-block;
-    outline: none
+  border-radius: 4px;
+  background: #25d366;
+  color: #fff;
+  font-size: 13px;
+  padding: 6px 8px;
+  display: inline-block;
+  outline: none;
 }
 
 .whatsapp a:-moz-focusring {
-    color: transparent;
-    text-shadow: 0 0 0 #000
+  color: transparent;
+  text-shadow: 0 0 0 #000;
 }
 
 .whatsapp-icon {
-    position: relative;
-    background-size: auto;
-    background-repeat: no-repeat;
-    display: inline-block;
-    height: 18px;
-    width: 18px;
-    top: -1px;
-    vertical-align: middle
+  position: relative;
+  background-size: auto;
+  background-repeat: no-repeat;
+  display: inline-block;
+  height: 18px;
+  width: 18px;
+  top: -1px;
+  vertical-align: middle;
 }
 
 .whatsapp i.icon-whatsapp {
-    font-size: 21px;
-    line-height: 21px;
-    padding-right: 7px
+  font-size: 21px;
+  line-height: 21px;
+  padding-right: 7px;
 }
 
 .whatsapp.bottom-left {
-    left: 0
+  left: 0;
 }
 
 .whatsapp.bottom-right {
-    right: 0
+  right: 0;
 }
 
 .whatsapp-hookDisplayFooter {
-    clear: none
+  clear: none;
 }
-
-
 
 .whatsapp-bottomWidth {
-    position: fixed;
-    bottom: 0;
-    z-index: 999999;
-    margin: 0;
-    padding: 0;
-    width: 100%!important;
-    border-radius: 0!important;
-    left: 0!important
+  position: fixed;
+  bottom: 0;
+  z-index: 999999;
+  margin: 0;
+  padding: 0;
+  width: 100% !important;
+  border-radius: 0 !important;
+  left: 0 !important;
 }
 
-
-
 .float-right {
-    position: fixed;
-    width: 60px;
-    height: 60px;
-    bottom: 25px;
-    right: 25px;
-    color: #fff;
-    border-radius: 50px;
-    text-align: center;
-    box-shadow: 2px 2px 3px #999
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 25px;
+  right: 25px;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
 }
 
 .float-floatingButtonCenter {
-    top: 46%;
-    z-index: 9999999
+  top: 46%;
+  z-index: 9999999;
 }
-
 
 .my-float {
-    font-size: 24px;
-    margin-top: 18px
+  font-size: 24px;
+  margin-top: 18px;
 }
 
-a.float+div.label-container {
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s, opacity .5s ease
+a.float + div.label-container {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s ease;
 }
 
-a.float:hover+div.label-container {
-    visibility: visible;
-    opacity: 1
+a.float:hover + div.label-container {
+  visibility: visible;
+  opacity: 1;
 }
 
 .float .fa-whatsapp:before {
-    font-size: xx-large;
-    top: 14px;
-    left: 1px;
-    position: relative
+  font-size: xx-large;
+  top: 14px;
+  left: 1px;
+  position: relative;
 }
